--- a/src/Components/POS/Pos.css
+++ b/src/Components/POS/Pos.css
@@ -4,7 +4,7 @@
   grid-template-columns: 3fr 2fr;
   gap: 20px;
   padding: 20px;
-  background: #f5f7fa;
+  background:var(--white-color);
   min-height: 100vh;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
